--- a/ATToDoList/Base.lproj/Main.storyboard
+++ b/ATToDoList/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eCN-bO-J1B">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,119 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uYb-wz-HIi">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="t0D-Hl-zvg"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="2Us-tV-biV"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uYb-wz-HIi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="2hM-Lz-222"/>
+                            <constraint firstItem="uYb-wz-HIi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="9Fo-ib-c5X"/>
+                            <constraint firstItem="uYb-wz-HIi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Sln-dk-tQY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uYb-wz-HIi" secondAttribute="bottom" id="W2p-XN-uuV"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="F9p-Yl-yKR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Rc7-ce-cYw"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1057" y="321"/>
+        </scene>
+        <!--Add Task View Controller-->
+        <scene sceneID="Ixj-Ev-Zpa">
+            <objects>
+                <viewController storyboardIdentifier="AddTaskViewController" id="Qu5-oC-j0c" customClass="AddTaskViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AQw-HM-88v"/>
+                        <viewControllerLayoutGuide type="bottom" id="0cj-YF-oYp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sTK-LQ-sen">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MLs-Bs-3hy">
+                                <rect key="frame" x="30" y="89" width="541" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="r9T-X8-h2S"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Qu5-oC-j0c" id="jWL-gc-ayx"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTj-Hy-cYW">
+                                <rect key="frame" x="30" y="135" width="270" height="30"/>
+                                <state key="normal" title="Add"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZ8-Ze-LLj">
+                                <rect key="frame" x="310" y="135" width="270" height="30"/>
+                                <state key="normal" title="Cancel"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GTj-Hy-cYW" firstAttribute="centerY" secondItem="kZ8-Ze-LLj" secondAttribute="centerY" id="0A7-0i-Dvr"/>
+                            <constraint firstItem="GTj-Hy-cYW" firstAttribute="top" secondItem="MLs-Bs-3hy" secondAttribute="bottom" constant="16" id="BAC-pY-LhT"/>
+                            <constraint firstItem="kZ8-Ze-LLj" firstAttribute="leading" secondItem="GTj-Hy-cYW" secondAttribute="trailing" constant="10" id="EwE-XW-WKO"/>
+                            <constraint firstItem="MLs-Bs-3hy" firstAttribute="leading" secondItem="sTK-LQ-sen" secondAttribute="leadingMargin" constant="10" id="IjT-wI-GTN"/>
+                            <constraint firstItem="kZ8-Ze-LLj" firstAttribute="height" secondItem="GTj-Hy-cYW" secondAttribute="height" id="Pfc-gs-T7i"/>
+                            <constraint firstItem="GTj-Hy-cYW" firstAttribute="leading" secondItem="sTK-LQ-sen" secondAttribute="leadingMargin" constant="10" id="cqH-fY-a2Z"/>
+                            <constraint firstItem="MLs-Bs-3hy" firstAttribute="top" secondItem="AQw-HM-88v" secondAttribute="bottom" constant="25" id="j5t-eu-rld"/>
+                            <constraint firstItem="kZ8-Ze-LLj" firstAttribute="width" secondItem="GTj-Hy-cYW" secondAttribute="width" id="tf6-tH-UgC"/>
+                            <constraint firstItem="MLs-Bs-3hy" firstAttribute="centerX" secondItem="sTK-LQ-sen" secondAttribute="centerX" id="vkz-Rh-yy7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kZ8-Ze-LLj" secondAttribute="trailing" id="zP9-xR-FGK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="XQs-67-DQv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4z9-jQ-bmK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2599" y="321"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sii-TI-gJw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eCN-bO-J1B" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="H2Y-GP-3bm">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="X3F-Wg-WLm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sYd-Cw-dtj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="211" y="-371"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="0ol-24-h5h">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3rE-9e-sTd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RBb-bT-NU0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Qu5-oC-j0c" kind="relationship" relationship="rootViewController" id="IVK-Pn-Q4T"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ojg-dG-ILx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1787" y="321"/>
         </scene>
     </scenes>
 </document>
